tests/macro_read/enum_without_id_type.stderr
error: `id_type` must be specified on enum
 --> $DIR/enum_without_id_type.rs:4:6
  |
4 | enum Test {}
  |      ^^^^
