tests/macro_read/enum_without_id_type.rs
use deku::prelude::*;

#[derive(DekuRead)]
enum Test {}

fn main() {}
